# vlms_with_ros2_workshop

./: LICENSE  README.md  download_weights.py
ros2_vlm/: README.md  package.xml  setup.cfg  setup.py
ros2_vlm/ros2_vlm/: blip_visual_qna.py  grounded_sam.py  submodules
ros2_vlm/ros2_vlm/modules/: blipvisual.py  groundedsam.py
ros2_vlm/ros2_vlm/modules/EfficientSAM/: README.md  export_to_onnx.py  export_to_torchscript.py  onnx_models.py  setup.cfg  setup.py
ros2_vlm/ros2_vlm/modules/EfficientSAM/efficient_sam/: __init__.py  build_efficient_sam.py  efficient_sam.py  efficient_sam_decoder.py  efficient_sam_encoder.py  mlp.py
ros2_vlm/ros2_vlm/modules/GroundingDINO/: LICENSE  README.md  requirements.txt
ros2_vlm/ros2_vlm/modules/GroundingDINO/groundingdino/datasets/: cocogrounding_eval.py
ros2_vlm/ros2_vlm/modules/GroundingDINO/groundingdino/models/GroundingDINO/: groundingdino.py
ros2_vlm/ros2_vlm/modules/GroundingDINO/groundingdino/util/: get_tokenlizer.py  inference.py  utils.py
